# labelstack

./: README.md  filled_template.csv
.github/workflows/: deploy.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
backend/api/: exceptions.py  filters.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/core/: exceptions.py  models.py  querysets.py  utils.py
backend/core/migrations/: 0001_initial.py  0002_order_job_id.py  0003_job_remove_order_job_id_order_job.py
backend/core/services/: csv_service.py  job_service.py
backend/fixtures/: 0001_shipping_providers.json
backend/tests/core/: test_utils.py
backend/tests/core/services/: test_csv_service.py
backend/tests/data/: template.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.tsx  main.tsx  routes.ts
frontend/src/api/: client.ts
frontend/src/api/types/: address.ts  errors.d.ts  errors.ts  global.ts  job.ts  order-party.ts  orders.ts  package.ts  shipping-provider.ts
frontend/src/app/: home.tsx
frontend/src/app/dashboard/: index.tsx  orders.tsx
frontend/src/app/error-pages/: page-not-found.tsx
frontend/src/components/dashboard/: page-header.tsx
frontend/src/components/ui/: checkbox.tsx  (+3 more)
frontend/src/constants/: environment.ts  errors.ts  images.ts
frontend/src/hooks/: use-filters.ts  use-modal.ts  use-pagination.ts
frontend/src/layouts/: dashboard.tsx  root.tsx
frontend/src/lib/: errors.ts  utils.ts
frontend/src/schemas/: address.ts  package.ts
(+52 files in other folders)
