[project]
name = "labelstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-cors-headers>=4.9.0",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-camel-case>=1.4.2",
    "drf-spectacular>=0.29.0",
    "python-decouple>=3.8",
]
