[project]
name = "labelstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-camel-case>=1.4.2",
    "drf-spectacular>=0.29.0",
    "gunicorn>=23.0.0",
    "polars>=1.37.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
